fixed forecast and box spacing

--- a/public/pages/home/home.css
+++ b/public/pages/home/home.css
@@ -516,7 +516,7 @@
 		}
 	
 	.forecast-box {
-		margin: -28.5vh 1vw 2vh 1vw;
+		margin: -30vh 1vw 2vh 1vw;
 		width: 35%;
 		}
 	
